--- a/raycaster/src/style.css
+++ b/raycaster/src/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
-body{
-  height: 100%;
+/* in style.css */
+body {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
