--- a/myportfolioAnimations/src/style.css
+++ b/myportfolioAnimations/src/style.css
@@ -5,14 +5,14 @@
 }
 
 html{
-  background: #1e1a20;
+  background: #01010f;
 }
 html,body{
   height: 100%;
   width: 100%;
 }
 body{
-  color: antiquewhite;
+  color: #f5f3f3;
   /* overflow: hidden; */
 }
 .webgl {
